<resources>
    <string name="app_name">Registration App</string>
    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="Gender">Gender</string>
    <string name="ID">Enter your student ID</string>
    <string name="School">Enter your school name</string>
    <string name="mail">Enter your email</string>
    <string name="No.">Enter your phone number</string>
    <string name="Greetings">Welcome</string>
    <string name="title">Please enter your personal info</string>
</resources>